# linux-sysio

./: Makefile.am  README  configure.in
CVS/: Entries  Repository
aio-emulation/: listio.c  module.mk
aio-emulation/CVS/: Entries  Repository
include/: linux-sysio.h
include/CVS/: Entries  Repository
src/: iox.c  module.mk  readx.c  writex.c
src/CVS/: Entries  Repository
test/: Makefile.am  test.c
test/CVS/: Entries  Repository
